# OptimizedHCT

./: DistributedTrainer.py  README.md  data.py  datascript.py  inf.py  inf_batch.txt  inf_image.txt  inf_quantized.txt  inference.py  params.py  submit.sh  submit2.sh  train.py  trainer.py
cpp/: CMakeLists.txt  CPP_logs_cpu.txt  CPP_logs_cuda.txt  native_hct.cpp
dataset/: image_labels.csv  image_labels_valid.csv
log/: Single GPU logs.out
quantized/: hct_base.py  inference.py  main.py  submit.sh
quantized/layer/: ac_layers.py  performer_attention.py  resnet_layers.py
quantized_dynamic/: data.py  hct_base.py  hpml_project_quant_3.out  inference.py  main.py  submit.sh
quantized_dynamic/layer/: ac_layers.py  performer_attention.py  resnet_layers.py
quantized_partial/: hct_base.py  inference.py  main.py  submit.sh
quantized_partial/layer/: ac_layers.py  performer_attention.py  resnet_layers.py
saved_model/: ptq_hct.pth  ptq_hct_partial.pth  torchscript_quantized_hct.pth
